# tock

./: Cargo.toml  Makefile
boards/acd52832/: Makefile
boards/arty_e21/: Makefile
boards/clue_nrf52840/: Makefile
boards/esp32-c3-devkitM-1/: Makefile
boards/gridania-tel/: Cargo.toml  Makefile  build.rs  chip_layout.ld
boards/hail/: Makefile  build.rs
boards/hifive1/: Makefile
boards/hifive_inventor/: Makefile  build.rs
boards/imix/: Makefile
boards/imxrt1050-evkb/: Makefile  build.rs
boards/microbit_v2/: Makefile
boards/msp_exp432p401r/: Makefile
boards/nano33ble/: Makefile
boards/nano_rp2040_connect/: Makefile
boards/nucleo_f429zi/: Makefile
boards/nucleo_f446re/: Makefile
boards/particle_boron/: Makefile  build.rs
boards/pico_explorer_base/: Makefile
boards/s32k144_evb/: Cargo.toml  Makefile  README.md  kernel_layout.ld  layout.ld
boards/s32k144_evb/src/: io.rs  main.rs
boards/s32k144evb/: Cargo.toml  Makefile  chip_layout.ld
boards/s32k144evb/src/: io.rs  main.rs
tools/: build-all-docs.sh  check-all-links.sh  check-for-readmes.sh  check_capsule_readme.py  diff_memory_usage.py  embedded_data_analyzer.py  embedded_data_visualizer.py  find_panics.py  github_actions_size_changes.sh  list_archs.sh  list_boards.sh  list_chips.sh  list_lock.sh  list_tools.sh  netlify-build.sh  post_size_changes_to_github.sh  print_tock_memory_usage.py  run_cargo_fix.sh  run_cargo_fmt.sh  run_cargo_generate-lockfile.sh  run_clippy.sh  semver.sh  stack_analysis.sh  svd2regs.py  toc.sh  update_chip_support.py  update_rust_version.sh
(+850 files in other folders)
